<resources>

    <string name="app_name">Login Sample</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_nlogin_now">Already Have an Account? Login Now.</string>
    <string name="back_to_nhome">Back to\nHome</string>

</resources>
