<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:cropToPadding="true"
                android:src="@drawable/login_hero_image" />

            <TextView
                style="@style/viewParent"
                android:text="@string/register"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/headerTextSize"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/parent.TextLayout"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/editTextName"
                    style="@style/modifiedEditText"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputMobile"
                style="@style/parent.TextLayout"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/editTextMobile"
                    style="@style/modifiedEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent.TextLayout"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent.TextLayout"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/ic_login_button"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_nlogin_now"
                android:textAlignment="center"
                android:textColor="@color/blackTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:src="@drawable/facebook_button" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:src="@drawable/google_button" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>